--- a/angular.json
+++ b/angular.json
@@ -9,6 +9,7 @@
         "@schematics/angular:component": {
           "style": "scss"
         }
+        
       },
       "root": "",
       "sourceRoot": "src",
@@ -100,5 +101,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "cf9fc987-35bf-4282-90a5-0c434aad2209"
   }
 }
